
0.5.1
=====

New Features:

  * Upgrade to Spring 2.0.2.
  * Simplify the process for creating a new Wiki "Special:" pages to hopefully
    make it easier for development of custom pages.
  * RSS updates (swift).
  
Bugfixes:

  * Logo image not appearing on sub-pages (such as "Topic/Sub-Topic").
  * Fix problem with images not being properly resized.
  * Fix webAppRootKey error when multiple JAMWiki instances installed on the
    same server (swift).

Translation Updates:

  * Updated Chinese translations (ewen0930).

0.5.0
=====

New Features:

  * Add ehcache library for caching of parsed topics and images.
  * Integrate the Acegi security framework (swift).
  * Add experimental support for LDAP.
  * Add experimental RSS support (swift).
  * Allow users to select a default locale (swift).
  * Consolidate configuration values into jamwiki-configuration.xml.
  * Add option to use WYSIWYG edit buttons (axelclk).
  * Add Special:Imagelist page to display a list of all images.
  * Add Special:Filelist page to display a list of all non-image files.
  * Experimental Special:Import XML import (gutsul).
  * Add support for the __FORCETOC__ tag.
  * Handle category names case-insensitive, thus "Category:Test" and
    "Category:test" are treated as the same category.
  * Display current date & time on Special:RecentChanges page.
  * Upgrade to Spring Framework 2.0.1.
  * Remove (now unused) convert-to-file option from Special:Convert.
  * Include the Bliki parser as an alternative to the default parser
    (axelclk).
  * Add access keys for edit page fields (axelclk).
  * Add option to open "printable page" links in a new window.
  * Add a check to verify a supported JDK version during setup.
  * Add pmd static code analysis target to the ANT build.xml file.

Bugfixes:

  * Fixes for MS SQL issues (scroco).
  * "Login already exists" error when trying to update user account fixed.
  * Fix upload error with IE that could cause file upload to incorrectly set